--- a/fortinet_with_roles/playbook.yml
+++ b/fortinet_with_roles/playbook.yml
@@ -4,6 +4,6 @@
   collections:
     - fortinet.fortios  
   connection: httpapi
-  gather_facts: True
+  gather_facts: False
   roles:
     - common
