--- a/fortinet_with_roles/roles/common/tasks/main.yml
+++ b/fortinet_with_roles/roles/common/tasks/main.yml
@@ -4,4 +4,4 @@
 - import_tasks: antivirus_profile.yml
 - import_tasks: application_profile.yml
 - import_tasks: webfilter_profile.yml
-- import_tasks: sdwan.yml
+#- import_tasks: sdwan.yml
