--- a/fortinet_with_roles/roles/common/tasks/application_profile.yml
+++ b/fortinet_with_roles/roles/common/tasks/application_profile.yml
@@ -2,7 +2,7 @@
   fortios_application_list:
     vdom: "{{ vdom }}"
     state: present
-    access_token: "{{ fortios_access_token }}"
+    # access_token: "{{ fortios_access_token }}"
     application_list:
       name: "HTMS Application"
       comment: "High Touch generated policy"
