--- a/fortinet/azure_cert.yml
+++ b/fortinet/azure_cert.yml
@@ -15,7 +15,6 @@
   - name: Importing the Azure remote certificate.
     fortios_monitor:
       vdom:  "{{ vdom }}"
-      access_token: "{{ fortios_access_token }}"
       enable_log: true
       selector: 'import.vpn-certificate.remote'
       params:
@@ -49,7 +48,7 @@
   # - name: Gather Certificates
   #   fortios_monitor_fact:
   #     vdom:  "{{ vdom }}"
-  #     access_token: "{{ fortios_access_token }}"
+  #     # access_token: "{{ fortios_access_token }}"
   #     enable_log: true
   #     selector: 'system_available-certificates'
   #     params:
@@ -62,7 +61,7 @@
   # - name: Import the remote Azure certificate for SAML authentication
   #   fortios_vpn_certificate_remote:
   #     vdom: "{{ vdom }}"
-  #     access_token: "{{ fortios_access_token }}"
+  #     # access_token: "{{ fortios_access_token }}"
   #     state: present
   #     vpn_certificate_remote:
   #       name: "Azure_Remote_Certificate"
