--- a/fortinet/import_firewall_policies.yml
+++ b/fortinet/import_firewall_policies.yml
@@ -22,7 +22,6 @@
       fortios_firewall_policy:
         vdom: "{{ vdom }}"
         state: present
-        access_token: "{{ fortios_access_token }}"
         firewall_policy:
           action: "{{ item.action }}"
           application_list: "{{ item.application }}"
@@ -63,7 +62,7 @@
     #   fortios_firewall_policy:
     #     vdom: "{{ vdom }}"
     #     state: present
-    #     access_token: "{{ fortios_access_token }}"
+    #     # access_token: "{{ fortios_access_token }}"
     #     firewall_policy:
     #       policyid: "{{ item.id }}"
     #       av_profile: "{{ item.av-profile }}"
@@ -74,7 +73,7 @@
     #   fortios_firewall_policy:
     #     vdom: "{{ vdom }}"
     #     state: present
-    #     access_token: "{{ fortios_access_token }}"
+    #     # access_token: "{{ fortios_access_token }}"
     #     firewall_policy:
     #       policyid: "{{ item.id }}"
     #       webfilter_profile: "{{ item.webfilter }}"
@@ -85,7 +84,7 @@
     #   fortios_firewall_policy:
     #     vdom: "{{ vdom }}"
     #     state: present
-    #     access_token: "{{ fortios_access_token }}"
+    #     # access_token: "{{ fortios_access_token }}"
     #     firewall_policy:
     #       policyid: "{{ item.id }}"
     #       av_profile: "{{ item.application }}"
