--- a/fortinet_with_roles/roles/common/tasks/main.yml
+++ b/fortinet_with_roles/roles/common/tasks/main.yml
@@ -4,4 +4,7 @@
 - import_tasks: antivirus_profile.yml
 - import_tasks: application_profile.yml
 - import_tasks: webfilter_profile.yml
-#- import_tasks: sdwan.yml
+- import_tasks: ips_profile.yml
+- import_tasks: sdwan.yml
+- import_tasks: default_internet_policy.yml
+- import_tasks: remove_session_helpers.yml
