--- a/fortinet_with_roles/roles/common/tasks/system_admin.yml
+++ b/fortinet_with_roles/roles/common/tasks/system_admin.yml
@@ -1,7 +1,7 @@
 - name: Configure Trusted Hosts on the system admin account to restrict https and ssh access.
   fortios_system_admin:
     vdom: "{{ vdom }}"
-    access_token: "{{ fortios_access_token }}"
+    # access_token: "{{ fortios_access_token }}"
     state: present
     system_admin:
       name: "admin"
