--- a/fortinet_with_roles/roles/common/tasks/webfilter_profile.yml
+++ b/fortinet_with_roles/roles/common/tasks/webfilter_profile.yml
@@ -2,7 +2,7 @@
   fortios_webfilter_ftgd_local_cat:
     vdom: "{{ vdom }}"
     state: present
-    access_token: "{{ fortios_access_token }}"
+    # access_token: "{{ fortios_access_token }}"
     webfilter_ftgd_local_cat:
       desc: "Allowed"
       id: 190
@@ -12,7 +12,7 @@
   fortios_webfilter_ftgd_local_cat:
     vdom: "{{ vdom }}"
     state: present
-    access_token: "{{ fortios_access_token }}"
+    # access_token: "{{ fortios_access_token }}"
     webfilter_ftgd_local_cat:
       desc: "Blocked"
       id: 191
@@ -22,7 +22,7 @@
   fortios_webfilter_ftgd_local_rating:
     vdom: "{{ vdom }}"
     state: present
-    access_token: "{{ fortios_access_token }}"
+    # access_token: "{{ fortios_access_token }}"
     webfilter_ftgd_local_rating:
       rating: "190"
       status: "enable"
@@ -34,7 +34,7 @@
   fortios_webfilter_ftgd_local_rating:
     vdom: "{{ vdom }}"
     state: present
-    access_token: "{{ fortios_access_token }}"
+    # access_token: "{{ fortios_access_token }}"
     webfilter_ftgd_local_rating:
       rating: "191"
       status: "enable"
@@ -46,7 +46,7 @@
   fortios_webfilter_profile:
     vdom: "{{ vdom }}"
     state: present
-    access_token: "{{ fortios_access_token }}"
+    # access_token: "{{ fortios_access_token }}"
     webfilter_profile:
       name: "HTMS Webfilter"
       comment: "High Touch generated policy"
